--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <p>Mejora tu conversion</p>
                     <h1>Diseñamos landing pages que hacen click con tu audiencia.</h1>
                     <p>Accede a un público de miles de personas, proporciona información a tus clientes, mide los resultados de tus campañas.</p>
-                    <!-- <img src=""> -->
                     <p>Explora nuestros productos</p>
                 </div>
             </div>
@@ -66,18 +65,16 @@
             <div class="linea">
             </div>
             <div class="section__slogan">
-                <h2>A foundation built for scale and forsight</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer est tellus, pulvinar ac iaculis vel, varius eu arcu tor vestibulum.</p>
+                <h2>La conexión con el cliente se construye a través de la comunicación</h2>
+                <p>La información concisa de una landing page permite a tu cliente entender con mayor facilidad el mensaje que buscas que reciba.</p>
             </div>
             <div class="section__info">
                 <figure>
                     <img src="./img/img-stadistics.jpg">
                 </figure>
                 <div class="info">
-                    <h3>A foundation built for scale and forsight</h3>
-                    <p>Use this long-form section to really paint a picture of the before and after. What’s the problem you’re solving? What’s the benefit people are getting?
-                        For example, if you’re hosting a webinar about how to collect leads for an online business, describe the struggle of trying to find and convert prospects—then explain how your webinar is gonna help make it easier.
-                        You can also highlight the urgency or exclusivity of your offer. If this is only available on a particular day or for a limited time, make that clear</p>
+                    <h3>Maximiza tus números con la landing page indicada.</h3>
+                    <p>Si buscas llegar a más clientes o mejorar tu tasa de conversión, tal vez estés buscando una "página de aterrizaje", estas webs tienen como finalidad proveer a su visitante la información esencial sobre el producto o servicio que intentas ofrecer, con el fin de generar una acción; como la compra, suscripción u obtención de datos para llevar a cabo una campaña efectiva.</p>
                 </div>
             </div>
 
@@ -121,7 +118,7 @@
                             <img src="./img/diseno-de-respuesta.png">
                         </figure>
                         <div class="text">
-                            <h4>Conecta con tu cliente</h4>
+                            <h4>Versatilidad</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         </div>
                     </div>
