--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </figure>
                     <div class="text">
                     <h4>Tráfico Orgánico</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p>Adquiere tráfico orgánico de los buscadores, los cuales mostrarán tu web a los usuarios interesados a través de las palabras claves y el contenido de tu web.</p>
                     </div>
                 </div>
                 <div class="box">
@@ -99,7 +99,7 @@
                         </figure>
                         <div class="text">
                             <h4>Medición de campañas</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <p>Un sitio web te permite monitorear con exactitud la actividad de los usuarios, lo que te proporcionará información útil y precisa acerca de su interés y la recepción de tu campaña de marketing.</p>
                         </div>
                 </div>
                     </div>
@@ -110,7 +110,7 @@
                     </figure>
                     <div class="text">
                         <h4>Conversión</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <p>La información al ser específica y el texto conciso, permite que el usuario llegue al mensaje sin distracciones y sea dirigido a realizar la acción específica que buscas como finalidad.</p>
                     </div>
                 </div>
                 <div class="box">
@@ -119,19 +119,19 @@
                         </figure>
                         <div class="text">
                             <h4>Versatilidad</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <p>Tu landing page adopta la forma de tu negocio, encuentra la tuya y enviá el mensaje al público que busca tu producto o servicio, a través de todas las plataformas y tipos de dispositivos.</p>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="section__pricing">
-                <h3>The pricing plan</h3>
-                <p>Reinforce the reason why people use your product.</br>
-                    Lead into the value of each plan before they proceed with their choice</p>
+                <h3>Precios</h3>
+                <p>Encuentra el plan que mejor se ajuste a tu ambición</br>
+                    Las webs no solo varían en forma, sino también en finalidad ¡escoge la tuya!</p>
                     <div class="price__boxes">
                         <div class="little__boxes">
-                            <h4>Basico</h4>
+                            <h4>Básico</h4>
                             <figure class="img-1">
                                 <img src="./img/Landing1_encabezado.png">
                             </figure>
@@ -139,14 +139,14 @@
                                 <img src="./img/Landing3_img.png">
                             </figure>
                             <div class="line"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non laoreet ipsum, eu congue eros. Nam finibus elit id imperdiet.</p>
+                            <p>Texto es minimalista, la llamada a la acción en el encabezado, condensa la información esencial para lograr tu objetivo.</p>
                             <div class="box__buttons">
                             <input type="button" value="Ver detalles">
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
                         <div class="little__boxes">
-                            <h4>Basico</h4>
+                            <h4>Medio</h4>
                             <figure class="img-1">
                                 <img src="./img/Landing1_encabezado.png">
                             </figure>
@@ -154,14 +154,14 @@
                                 <img src="./img/Landing3_img.png">
                             </figure>
                             <div class="line"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non laoreet ipsum, eu congue eros. Nam finibus elit id imperdiet.</p>
+                            <p>Permite mayor cantidad de información, puedes informar sobre los beneficios o características de tu producto o servicio.</p>
                             <div class="box__buttons">
                             <input type="button" value="Ver detalles">
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
                         <div class="little__boxes">
-                            <h4>Basico</h4>
+                            <h4>Avanzado</h4>
                             <figure class="img-1">
                                 <img src="./img/Landing1_encabezado.png">
                             </figure>
@@ -169,7 +169,7 @@
                                 <img src="./img/Landing3_img.png">
                             </figure>
                             <div class="line"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non laoreet ipsum, eu congue eros. Nam finibus elit id imperdiet.</p>
+                            <p>Haz que el usuario conozca cada detalle sobre tu operación a través de imágenes, textos y gráficos esenciales para tu imagen empresarial.</p>
                             <div class="box__buttons">
                             <input type="button" value="Ver detalles">
                             <input type="button" value="Contactanos">
@@ -181,7 +181,7 @@
                 <div class="sc_text">
                 <h2>¿Buscás una web personalizada?</h2>
                 <span>Sé el primero en los resultados de las búsquedas de tus clientes.</span>
-                <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. You day real less till dear read.</p>
+                <p>Si buscás un enfoque único que se ajuste a tus objetivos, desarrollamos una landing page a tu medida. Construímos un modelo desde 0 para tu producto, servicio o campaña y transmitimos tu mensaje de manera efectiva a través de un diseño estratégico.</p>
                 </div>
                 <div class="custom__card">
                     <h4>Personalizada</h4>
