--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             </figure>
                             <div class="line"></div>
                             <p>Texto es minimalista, la llamada a la acción en el encabezado, condensa la información esencial para lograr tu objetivo.</p>
-                            <div class="box__buttons">
+                            <div class="box__buttons" id="click_Bas">
                             <input type="button" value="Ver detalles">
                             <input type="button" value="Contactanos">
                             </div>
@@ -156,7 +156,7 @@
                             <div class="line"></div>
                             <p>Permite mayor cantidad de información, puedes informar sobre los beneficios o características de tu producto o servicio.</p>
                             <div class="box__buttons">
-                            <input type="button" value="Ver detalles">
+                            <input type="button" value="Ver detalles" id="click_Med">
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
@@ -171,12 +171,12 @@
                             <div class="line"></div>
                             <p>Haz que el usuario conozca cada detalle sobre tu operación a través de imágenes, textos y gráficos esenciales para tu imagen empresarial.</p>
                             <div class="box__buttons">
-                            <input type="button" value="Ver detalles">
+                            <input type="button" value="Ver detalles" id="click_Ava">
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
                     </div>
-            </div>
+        </div>
             <div class="section__custom">
                 <div class="sc_text">
                 <h2>¿Buscás una web personalizada?</h2>
@@ -199,5 +199,10 @@
                 </div>
             </div>
         </div>
+        <div class="detalles none" id="ver_detalles">
+            <div class="presentacion">
+            </div>
+        </div>
+        <script src="./script/main.js"></script>
 </body>
 </html>
