--- a/index.html
+++ b/index.html
@@ -199,8 +199,26 @@
                 </div>
             </div>
         </div>
-        <div class="detalles none" id="ver_detalles">
+        <div class="detalles" id="ver_detalles">
             <div class="presentacion">
+                <div>
+                <div class="selectedPreview">
+                <figure>
+                    <img src="./img/preview300.png">
+                </figure>
+                 </div>
+            <div class="previewImg">
+                <figure>
+                    <img src="./img/preview-300.png">
+                </figure>
+                <figure>
+                    <img src="./img/preview-1mil.png">
+                </figure>
+                <figure>
+                    <img src="./img/preview300.png">
+                </figure>
+                </div>
+            </div>
             </div>
         </div>
         <script src="./script/main.js"></script>
