--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             </figure>
                             <div class="line"></div>
                             <p>Texto es minimalista, la llamada a la acción en el encabezado, condensa la información esencial para lograr tu objetivo.</p>
-                            <div class="box__buttons" id="click_Bas">
-                            <input type="button" value="Ver detalles">
+                            <div class="box__buttons">
+                            <input type="button" value="Ver detalles" id="click_Bas">
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                 </div>
             </div>
         </div>
-        <div class="detalles" id="ver_detalles">
+        <div class="detalles none" id="ver_detalles">
             <div class="presentacion">
                 <div>
                 <div class="selectedPreview">
