--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                     </figure>
                 </div>
                 <div class="main__hero_2">
+                    <div class="hero__text">
                     <p>Mejora tu conversion</p>
                     <h1>Diseñamos landing pages que hacen click con tu audiencia.</h1>
                     <p>Accede a un público de miles de personas, proporciona información a tus clientes, mide los resultados de tus campañas.</p>
                     <p>Explora nuestros productos</p>
+                </div>
                 </div>
             </div>
             <div class="section__benefits">
