--- a/index.html
+++ b/index.html
@@ -201,15 +201,18 @@
                 </div>
             </div>
         </div>
-        <div class="detalles none" id="ver_detalles">
+        <div class="detalles" id="ver_detalles">
             <div class="presentacion">
-                <div>
-                <div class="selectedPreview">
-                <figure>
-                    <img src="./img/preview300.png">
-                </figure>
-                 </div>
-            <div class="previewImg">
+                <div class="preview_area">
+                    <div class="selectedPreview">
+                    <h2>Previsualización</h2>
+                    <figure>
+                        <img src="./img/preview300.png">
+                    </figure>
+                </div>
+                </div>
+            <div class="select_Area">
+                <div class="previewImg">
                 <figure>
                     <img src="./img/preview-300.png">
                 </figure>
