--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                 </div>
             <div class="select_Area">
                 <div class="previewImg">
+                    <h3>Selecciona una imagen</h3>
                 <figure>
                     <img src="./img/preview-300.png">
                 </figure>
