--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@
             </div>
         </div>
         <script src="./script/main.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script> -->
 </body>
 </html>
