--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversa</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link rel="icon" type="image/jpg" href="./img/fav_icon2.jpg"/>
 </head>
 <body>
@@ -229,6 +230,5 @@
             </div>
         </div>
         <script src="./script/main.js"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script> -->
 </body>
 </html>
