--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>Blog</li>
                     <li>Support</li>
                 </ul>
-                <p>Contactanos</p>
+                <p onclick="window.location.href='https://api.whatsapp.com/send?phone=+595973236438&text=Buenas%2C+estoy+interesado+en+una+landing+page';">Contactanos</p>
             </div>
             <div class="main__hero">
                 <div class="main__hero_1">
@@ -134,13 +134,13 @@
                 <p>Encuentra el plan que mejor se ajuste a tu ambición</br>
                     Las webs no solo varían en forma, sino también en finalidad ¡escoge la tuya!</p>
                     <div class="price__boxes">
-                        <div class="little__boxes">
+                        <div class="little__boxes first">
                             <h4>Básico</h4>
                             <figure class="img-1">
-                                <img src="./img/Landing1_encabezado.png">
+                                <img src="./img/Landing3_img.png">
                             </figure>
                             <figure class="img-2">
-                                <img src="./img/Landing3_img.png">
+                                <img src="./img/landing-200-2.png">
                             </figure>
                             <div class="line"></div>
                             <p>Texto es minimalista, la llamada a la acción en el encabezado, condensa la información esencial para lograr tu objetivo.</p>
@@ -152,10 +152,10 @@
                         <div class="little__boxes">
                             <h4>Medio</h4>
                             <figure class="img-1">
-                                <img src="./img/Landing1_encabezado.png">
+                                <img src="./img/500-preview-2.png">
                             </figure>
                             <figure class="img-2">
-                                <img src="./img/Landing3_img.png">
+                                <img src="./img/500-preview.png">
                             </figure>
                             <div class="line"></div>
                             <p>Permite mayor cantidad de información, puedes informar sobre los beneficios o características de tu producto o servicio.</p>
@@ -164,13 +164,13 @@
                             <input type="button" value="Contactanos">
                             </div>
                         </div>
-                        <div class="little__boxes">
+                        <div class="little__boxes third">
                             <h4>Avanzado</h4>
                             <figure class="img-1">
-                                <img src="./img/Landing1_encabezado.png">
+                                <img src="./img/1-millon-preview.png">
                             </figure>
                             <figure class="img-2">
-                                <img src="./img/Landing3_img.png">
+                                <img src="./img/1millon-preview-1.png">
                             </figure>
                             <div class="line"></div>
                             <p>Haz que el usuario conozca cada detalle sobre tu operación a través de imágenes, textos y gráficos esenciales para tu imagen empresarial.</p>
