--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
         </div>
-        <div class="detalles none" id="ver_detalles">
+        <div class="detalles" id="ver_detalles">
             <div class="presentacion">
                 <div class="preview_area">
                     <div class="selectedPreview">
