--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                 </figure>
                 </div>
             </div>
+            <figure class="salir"><img src="./img/marca-x.png" alt="X"></figure>
             </div>
         </div>
         <script src="./script/main.js"></script>
